force-app/main/default/objects/Account/fields/Devops__c.field-meta.xml
<CustomField>
    <fullName>Devops__c</fullName>
    <label>Devops</label>
    <length>15</length>
    <type>Text</type>
</CustomField>