force-app/main/default/objects/Account/fields/Devops_gearset_field__c.field-meta.xml
<CustomField>
    <fullName>Devops_gearset_field__c</fullName>
    <label>Devops gearset field</label>
    <length>15</length>
    <type>Text</type>
</CustomField>