force-app/main/default/objects/Account/fields/Devops_new_field__c.field-meta.xml
<CustomField>
    <fullName>Devops_new_field__c</fullName>
    <label>Devops new field</label>
    <length>15</length>
    <type>Text</type>
</CustomField>