force-app/main/default/objects/Account/fields/testtext__c.field-meta.xml
<CustomField>
    <fullName>testtext__c</fullName>
    <label>testtext</label>
    <length>12</length>
    <type>Text</type>
</CustomField>